browser/themes/shared/plugin-doorhanger.inc.css
#
notification
-
popup
[
popupid
=
"
click
-
to
-
play
-
plugins
"
]
>
.
panel
-
arrowcontainer
>
.
panel
-
arrowcontent
{
padding
:
0px
;
}
.
click
-
to
-
play
-
plugins
-
notification
-
center
-
box
{
border
:
1px
solid
ThreeDShadow
;
margin
:
10px
;
}
.
plugin
-
popupnotification
-
centeritem
:
nth
-
child
(
odd
)
{
background
-
color
:
rgba
(
0
0
0
0
.
1
)
;
}
.
center
-
item
-
label
{
margin
-
inline
-
start
:
6px
;
margin
-
bottom
:
0
;
text
-
overflow
:
ellipsis
;
}
.
center
-
item
-
warning
-
icon
{
background
-
image
:
url
(
"
chrome
:
/
/
mozapps
/
skin
/
extensions
/
alerticon
-
info
-
negative
.
svg
"
)
;
background
-
repeat
:
no
-
repeat
;
width
:
16px
;
height
:
15px
;
margin
-
inline
-
start
:
6px
;
}
.
click
-
to
-
play
-
plugins
-
notification
-
button
-
container
{
background
-
color
:
var
(
-
-
arrowpanel
-
dimmed
)
;
border
-
top
:
1px
solid
var
(
-
-
panel
-
separator
-
color
)
;
padding
:
10px
;
margin
-
top
:
5px
;
}
.
click
-
to
-
play
-
popup
-
button
{
width
:
50
%
;
}
.
click
-
to
-
play
-
plugins
-
notification
-
description
-
box
{
padding
:
10px
;
}
.
click
-
to
-
play
-
plugins
-
outer
-
description
{
margin
-
top
:
8px
;
}
.
click
-
to
-
play
-
plugins
-
notification
-
link
.
center
-
item
-
link
{
margin
:
0
;
}
.
messageImage
[
value
=
"
plugin
-
hidden
"
]
{
list
-
style
-
image
:
url
(
chrome
:
/
/
browser
/
skin
/
notification
-
icons
/
plugin
.
svg
)
;
}
/
*
Keep
any
changes
to
this
style
in
sync
with
pluginProblem
.
css
*
/
notification
.
pluginVulnerable
{
background
-
color
:
rgb
(
72
72
72
)
;
background
-
image
:
url
(
chrome
:
/
/
mozapps
/
skin
/
plugins
/
contentPluginStripe
.
png
)
;
color
:
white
;
}
notification
.
pluginVulnerable
.
messageImage
{
list
-
style
-
image
:
url
(
chrome
:
/
/
browser
/
skin
/
notification
-
icons
/
plugin
-
blocked
.
svg
)
;
}

