Bug 1392979 - Modernize buttons for Flash CTP r=Felipe
This is just the most conservative thing we can do to get the
Flash doorhanger to not look out of place next to other
doorhangers. This does not change the doorhanger's strings or
anything substantive. Still looking into what that would entail,
but I thought I would drop this in as a baseline.

Minor notes: added default="true" to get the OS-specific button
reordering of normal doorhangers, and removed the close button
since the doorhanger will close by just clicking out of it.

MozReview-Commit-ID: 9jhHLfzSeXZ

UltraBlame original commit: f0ccba7a4ba1ce4f0d518954962f8e7fb54f9c82

--- a/browser/themes/shared/plugin-doorhanger.inc.css
+++ b/browser/themes/shared/plugin-doorhanger.inc.css
@@ -203,32 +203,15 @@ arrowpanel
 dimmed
 )
 ;
-border
--
-top
-:
-1px
-solid
-var
-(
--
--
-panel
--
-separator
--
-color
-)
-;
-padding
-:
-10px
-;
 margin
 -
 top
 :
 5px
+;
+display
+:
+flex
 ;
 }
 .
@@ -310,6 +293,27 @@ link
 margin
 :
 0
+;
+}
+.
+click
+-
+to
+-
+play
+-
+plugins
+-
+notification
+-
+main
+-
+box
+{
+width
+:
+100
+%
 ;
 }
 .
